syntax = "proto3";

/* import "google/protobuf/empty.proto"; */
/* import "google/protobuf/timestamp.proto"; */
import "google/api/annotations.proto";
import "google/protobuf/wrappers.proto";
import "gogoproto/gogo.proto";
import "github.com/mwitkow/go-proto-validators/validator.proto";

option go_package = "product";

option java_multiple_files = true;
option java_package = "org.apicube.protocol.product";
option java_outer_classname = "ProductProto";

option (gogoproto.marshaler_all) = true;
option (gogoproto.unmarshaler_all) = true;
option (gogoproto.sizer_all) = true;
option (gogoproto.populate_all) = true;
option (gogoproto.equal_all) = true;
option (gogoproto.testgen_all) = true;
option (gogoproto.benchgen_all) = true;

// https://cloud.google.com/apis/design/standard_methods

package apicube.product;

service ProductService {
  rpc ListSimilars(ListSimilarsRequest) returns (ListSimilarsResponse) {
    option (google.api.http) = {
        get: "/v1/{p=products}/{name}/similars"
    };
  }

  rpc ListLikes(ListLikesRequest) returns (ListLikesResponse) {
    option (google.api.http) = {
        get: "/v1/{p=products}/{name}/more-like-this"
    };
  }
}

message Product {
  google.protobuf.Int64Value id = 1 [(gogoproto.customname) = "ID"];
  string name = 2 [(validator.field) = {string_not_empty: true}];
  /* string image = 3 [(validator.field) = {string_not_empty: true}]; */
  google.protobuf.StringValue description_detail = 4;

  /* google.protobuf.Timestamp created_date = 5; */
  /* google.protobuf.Timestamp updated_date = 6; */
}

message ListSimilarsRequest {
  string name       = 1 [(validator.field) = {string_not_empty: true}];
  int32  page_size  = 2; // The maximum number of items to return.
  string page_token = 3; // The next_page_token value returned from a previous List request, if any.

  string p          = 100;
}

message ListSimilarsResponse {
  repeated Product products = 1;
  string   next_page_token  = 2;
}

message ListLikesRequest {
  string name       = 1 [(validator.field) = {string_not_empty: true}];
  int32  page_size  = 2; // The maximum number of items to return.
  string page_token = 3; // The next_page_token value returned from a previous List request, if any.

  string p          = 100;
}

message ListLikesResponse {
  repeated Product products = 1;
  string   next_page_token  = 2;
}

